--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ url: "https://www.maximetestu.com" # the base hostname & protocol for your site,
 # Build settings
 markdown: kramdown
 theme: minima
-gems:
+plugins:
   - jekyll-feed
 exclude:
   - Gemfile
